ISSUE #55 - Added tabbed panels, althought needs some css work

--- a/plugins/base/camera.jade
+++ b/plugins/base/camera.jade
@@ -4,6 +4,6 @@ block title
 	span Scan QR Code
 
 block content
-	div(ng-controller='InspectCtrl')
+	div(ng-controller='HeaderCtrl')
 		video#videocamera.dialogs(autoplay, capture='captureQRCode', camera-switch='cameraSwitch')
 
