--- a/plugins/project/project.jade
+++ b/plugins/project/project.jade
@@ -4,27 +4,27 @@
 			div.nav-project-title  <b>{{Data.ProjectData.name}}</b>
 			if ui.header
 				each uicomp in ui.header
-					!= renderMe(uicomp, locals)
+					!= renderMe(uicomp["template"], locals)
 
 	//#nav-version-control(ng-controller='RevisionCtrl', ng-show="Data.ui.revisionSelector")
 	#project-viewport-container.row
 		div#x3d.project-viewport
 		if ui.viewport
 			each uicomp in ui.viewport
-				!= renderMe(uicomp, locals)
+				!= renderMe(uicomp["template"], locals)
 	.ui2
 		#ui2-left
 			if ui.left
 				each uicomp in ui.left
-					!= renderMe(uicomp, locals)
+					!= renderMe(uicomp["template"], locals)
 		#ui2-right
 			if ui.right
 				each uicomp in ui.right
-					!= renderMe(uicomp, locals)
+					!= renderMe(uicomp["template"], locals)
 
 	#bottom-panel.row.mainrow.collapsed
 		if ui.footer
 			each uicomp in ui.footer
-				!= renderMe(uicomp, locals)
+				!= renderMe(uicomp["template"], locals)
 		div(ui-view="footer")
 
