--- a/plugins/panels/panelRight.jade
+++ b/plugins/panels/panelRight.jade
@@ -2,7 +2,7 @@
 	#ui2-rightpanel-collapse-btn.pull-left.panel-collapse-btn(ng-click="toggleRightPanel()")
 		i.fa.fa-list
 	if ui.rightpanel
-		ul.nav.nab-tabs
+		ul.nav.nav-tabs
 			each uicomp in ui.rightpanel
 				li
 					a(data-toggle="tab", href='#' + uicomp["name"]) #{uicomp["name"]}
