--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -19,7 +19,7 @@ html(lang="en" ng-app="3drepo").ng-scope
 
 		// Predefine the app
 		script.
-			angular.module('3drepo', ['ui.router', 'ui.bootstrap', 'ui.multiselect'])
+			angular.module('3drepo', ['ui.router', 'ui.bootstrap', 'ui.multiselect', 'ui.bootstrap.datetimepicker'])
 			.constant('structure', !{structure})
 			.constant('parentStates', !{parentStateJSON})
 			//.constant('pluginLevels', !{pluginLevelsJSON})
