--- a/plugins/viewpoints/newViewpoint.jade
+++ b/plugins/viewpoints/newViewpoint.jade
@@ -7,7 +7,7 @@ block content
 	form(role="form")
 		.form-group
 			label(for="viewpointname") Viewpoint Name: 
-			input.form-control#ViewpointName(type="text", ng-model="params.name", placeholder="Enter viewpoint name") 
+			input.form-control#viewpointname(type="text", ng-model="params.name", placeholder="Enter viewpoint name") 
 block buttons
 	button.btn.btn-default(ng-click="ok()") Create
 
