MASTER - Quick update to the maintenance page

--- a/main/maintenance.jade
+++ b/main/maintenance.jade
@@ -13,5 +13,5 @@ html
 								td
 									img(src='logo.png')
 							tr
-								td(style='padding: 30px; width: 350px; font-family: helvetica; font-size: 40px;') Apologies, but the site currently down for maintenance.
+								td(style='padding: 30px; width: 350px; font-family: helvetica; font-size: 40px;') Apologies, but the site is currently down for maintenance.
 
