ISSUE #55 - Plenty of bug fixes

--- a/plugins/viewpoints/viewpoints.jade
+++ b/plugins/viewpoints/viewpoints.jade
@@ -1,4 +1,4 @@
-div(ng-controller='ViewpointCtrl')
+div.tools-menu-items(ng-controller='ViewpointCtrl')
 	li.divider
 	li Viewpoints
 	li.divider
@@ -13,13 +13,14 @@ div(ng-controller='ViewpointCtrl')
 			i.fa.fa-power-off(ng-show="ViewerService.defaultViewer.isFlyingThrough")
 			span Fly Through
 	li.divider
-	li.dropdown-submenu.pull-left(ng-repeat="(group, names) in ViewerService.defaultViewer.viewpoints")
-		a(href='#') {{group}}
-		ul.dropdown-menu
-			li(ng-repeat="(name, id) in names")
-				a(ng-click='setCurrentViewpoint(id)')
-					i.fa.fa-check(ng-show="ViewerService.defaultViewer.selectedViewpoint == id")
-					span {{name}}
+	li
+		div.dropdown-submenu(ng-repeat="(group, names) in viewpoints")
+			a(href='#') {{group}}
+			ul.dropdown-menu
+				li(ng-repeat="(name, id) in names")
+					a(ng-click='setCurrentViewpoint(id)')
+						i.fa.fa-check(ng-show="ViewerService.defaultViewer.selectedViewpoint == id")
+						span {{name}}
 	li.divider
 	li
 		a(ng-click='newViewpoint()')
