ISSUE #55 - Fixes to camera

--- a/plugins/base/camera.jade
+++ b/plugins/base/camera.jade
@@ -5,5 +5,5 @@ block title
 
 block content
 	div(ng-controller='HeaderCtrl')
-		video#videocamera.dialogs(autoplay, capture='captureQRCode', camera-switch='cameraSwitch')
+		video#videocamera.dialogs(autoplay, capture='captureQRCode', camera-switch='{{CameraService.cameraSwitch}}')
 
