--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -364,10 +364,10 @@ span.fancytree-title:hover {
 
 #metadata .tr {
 	text-align: left;
-
 }
 
 #calendarview {
+	background-color: white;
 	color: rgb(1,1,1);
 	position: relative;
 }
