--- a/plugins/base/header.jade
+++ b/plugins/base/header.jade
@@ -7,7 +7,7 @@ header#header.navbar.navbar-fixed-top(ng-controller='HeaderCtrl')
 					span.icon-bar
 					span.icon-bar
 					span.icon-bar
-				a.navbar-brand.logo-pad.header-logo(href="#", ng-click="goDefault()")
+				a.navbar-brand.logo-pad.header-logo(href="#", ng-click="goAccount()")
 					img.v-expand(src='/public/images/3drepo-logo-white.png')
 			nav.collapse.navbar-collapse.bs-navbar-collapse(role='navigation')
 				//a(href='http://blog.getbootstrap.com') Enterprise
@@ -17,7 +17,7 @@ header#header.navbar.navbar-fixed-top(ng-controller='HeaderCtrl')
 							i.fa.fa-qrcode
 						button.btn
 							i.fa.fa-search
-						button.btn(ng-hide='!Auth.loggedIn', ng-click="goDefault()")
+						button.btn(ng-hide='!Auth.loggedIn', ng-click="goAccount()")
 							i.fa.fa-user
 						button.btn(ng-hide='!Auth.loggedIn', ng-click="logOut()")
 							i.fa.fa-sign-out
