MASTER - Quick bug fix for https configuration

--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -9,6 +9,8 @@ html(lang="en" ng-app="3drepo").ng-scope
 
 		title 3D Repo
 
+		script(type="text/javascript", src="/public/plugins/base/config.js")
+
 		// CSS Files
 		each val, key in cssfiles
 			link(rel='stylesheet', type='text/css', href=val)
