--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1446,14 +1446,16 @@ header button.btn {
 /*************************************************/
 
 
-
+s
 /* Helps position submenu */
 .dropdown-submenu {
     position: relative;
 }
 /* Menus under the submenu should show up on the right of the parent */
 .dropdown-submenu > .dropdown-menu {
-	right: 100%;
+	max-height: 600px;
+	min-width:100%;
+	overflow-y: scroll;
     -webkit-border-radius:0 6px 6px 6px;
        -moz-border-radius:0 6px 6px 6px;
             border-radius:0 6px 6px 6px;
@@ -1462,6 +1464,7 @@ header button.btn {
 .dropdown-submenu:hover>.dropdown-menu {
     display:block;
 }
+
 /* Add carot to submenu links */
 .dropdown-submenu>a:after {
     display:block;
@@ -1625,3 +1628,8 @@ ul.fancytree-container li {
 	position: absolute;
 	border: none;
 }
+
+#clipslider {
+	width: 100%;
+}
+
