ISSUE #70 - Beginnings of the start of the pin functionality

--- a/plugins/issues/newissue.jade
+++ b/plugins/issues/newissue.jade
@@ -8,19 +8,11 @@ block content
 		.form-group
 			label.control-label.col-sm-2(for="issuename") Issue name:
 			.col-sm-10
-				input.form-control#issuename(type='text', ng-model='params.name')
+				input.form-control#issuename(type='text', ng-model='params.name', ng-required='true')
 		.form-group
 			label.control-label.col-sm-2(for="deadline") Deadline:
 			.col-sm-10
-				.dropdown
-					a#calendar.dropdown-toggle.calendar-select(role='button', data-toggle='dropdown', data-target='#')
-						.input-append
-							input(type='text', ng-model='params.date')
-							span.add-on
-								i.fa.fa-calendar
-					ul#calendarview.dropdown-menu(role='menu', aria-labelledby='calendar')
-						datetimepicker(ng-model='params.date', data-datetimepicker-config="{ dropdownSelector: '.calendar-select' }")
-
+				input.form-control(type='date', datepicker-popup, ng-model='params.date', ng-required='true')
 block buttons
 	button.btn.btn-default(ng-click="ok()") Create
 
