ISSUE #69 - Inclusion of live chat

--- a/plugins/issues/issues.jade
+++ b/plugins/issues/issues.jade
@@ -2,26 +2,27 @@
 	.input-group
 		button.btn(ng-click='newIssue()', ng-disabled='!objectIsSelected')
 			i.fa.fa2x.fa-plus
-		button.btn(ng-click='refresh()')
-			i.fa.fa2x.fa-refresh
-	#accordion.panel-group
-		.panel.panel-default(ng-repeat="issue in IssuesService.issues")
+	#accordion.panel-group(ng-repeat="(project, projectIssues) in IssuesService.issues")
+		.panel.panel-default
+			.panel-heading 
+				h4.panel-title {{ project }}
+		.panel.panel-default(ng-repeat="issue in projectIssues")
 			.panel-heading
-				h4.panel-title 
-					a(data-toggle='collapse', data-parent='#accordion', ng-click='openIssue(issue._id)', href="{{'#acc_' + issue.number}}") {{ issue.number + " - " + issue.name + " [" + issue.deadlineString + "]"}}
-					button.btn(ng-if="!issue.complete", ng-click='complete(issue._id)')
+				h2.panel-title 
+					a(data-toggle='collapse', data-parent='#accordion', ng-click='openIssue(issue)', data-target="#{{issue._id}}") {{ issue.number + " - " + issue.name + " [" + issue.deadlineString + "]"}}
+					button.btn(ng-if="!issue.complete", ng-click='complete(issue)')
 						i.fa.fa-check
 					button.btn(ng-click='locateObject(issue._id)')
 						i.fa.fa-eye
-			.panel-collapse.collapse(id="{{'acc_' + issue.number}}")
+			.panel-collapse.collapse(id="{{issue._id}}")
 				.panel-body
-					table.metadata-table(ng-repeat="comment in issue.comments")
+					table.metadata-table(ng-repeat="comment in IssuesService.issueContents[issue._id]")
 						tr
-							th.metadata-title(colspan="2") {{comment.author}}
+							th.metadata-title(colspan="2") {{comment.owner}}
 						tr 
-							td {{comment.text}}
+							td {{comment.comment}}
 					.input-group(ng-if="!issue.complete")
-						input(ng-model="newComment.text", placeholder="New Comment")
-						button.btn(ng-click="addNewComment(issue._id)")
-								i.fa.fa-comment
+						form(ng-submit="addNewComment(issue)")
+							input(ng-model="newComment.text", placeholder="New Comment")
+							input#hiddensubmitbutton(type="submit")
 
