--- a/plugins/issues/pin.jade
+++ b/plugins/issues/pin.jade
@@ -1,3 +1,3 @@
-#map-pin-menu-icon(ng-hide='!Auth.loggedIn', ng-controller="IssuesCtrl")
+#map-pin-menu-icon(ng-hide='!Auth.loggedIn')
 	button.btn(simple-draggable)
 		i.fa.fa-map-pin
