ISSUE #69 - More merging of other functionality

--- a/plugins/project/project.jade
+++ b/plugins/project/project.jade
@@ -8,10 +8,10 @@
 
 	//#nav-version-control(ng-controller='RevisionCtrl', ng-show="Data.ui.revisionSelector")
 	#project-viewport-container.row
-		div#x3d.project-viewport
-		if ui.viewport
-			each uicomp in ui.viewport
-				!= renderMe(uicomp["template"], locals)
+		div#x3d.project-viewport.viewport
+			if ui.viewport
+				each uicomp in ui.viewport
+					!= renderMe(uicomp["template"], locals)
 	.ui2
 		#ui2-left
 			if ui.left
