MASTER - Bug fixes

--- a/plugins/clip/clip.jade
+++ b/plugins/clip/clip.jade
@@ -10,6 +10,6 @@
 				span Z
 		#clipslider.input-group
 			span Slider Position
-			slider(ng-model="slider",min=1,max="sliderMaxValue",step=1)
+			slider(ng-model="slider",min=1,max=1000,step=1)
 
 
