--- a/plugins/issues/issues.jade
+++ b/plugins/issues/issues.jade
@@ -9,10 +9,12 @@
 		.panel.panel-default(ng-repeat="issue in projectIssues")
 			.panel-heading
 				h2.panel-title 
-					a(data-toggle='collapse', ng-click='openIssue(issue)') {{ issue.number + " - " + issue.name }}
+					a(data-toggle='collapse', data-parent='#accordion', ng-click='openIssue(issue)', data-target="#{{issue._id}}") {{ issue.number + " - " + issue.name + " [" + issue.deadlineString + "]"}}
 					button.btn(ng-if="!issue.complete", ng-click='complete(issue)')
 						i.fa.fa-check
-			.panel-collapse(id="{{issue._id}}", collapse="expanded[issue._id] ? !expanded[issue._id] : true")
+					button.btn(ng-click='locateObject(issue._id)')
+						i.fa.fa-eye
+			.panel-collapse.collapse(id="{{issue._id}}")
 				.panel-body
 					table.metadata-table(ng-repeat="comment in IssuesService.issueContents[issue._id]")
 						tr
