ISSUE #71 - Fix merge errors, and begin of cleanup

--- a/plugins/issues/pin.jade
+++ b/plugins/issues/pin.jade
@@ -1,3 +1,4 @@
-#map-pin-menu-icon(ng-hide='!Auth.loggedIn')
+#map-pin-menu-icon(ng-controller='IssuesCtrl', ng-hide='!Auth.loggedIn')
 	button.btn(simple-draggable)
 		i.fa.fa-map-pin
+
