--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -382,19 +382,16 @@ span.fancytree-title:hover {
 	background-color: transparent;
 }
 
-.floatingMeta {
+floating {
     font-family: sans-serif;
-	color: white;
+	color: red;
 	font-weight: 100;
-	padding: 6px;
-	margin:  2px;
 	text-align: center;
-	background-color: rgba(0, 0, 0, 0.5);
 	position: absolute;
-	border:   none
+	cursor: pointer;
+	pointer-events: none;
+	border:   none;
 	z-index:   15000;
-	min-width:    70px;
-	min-height:   1px;
 	left:     0px;
 	top:      0px;
 }
