ISSUE #105 - Created Grunt file to minimise plugin JS files
The Grunt file concatanates and minimises the public plugin JS files.
The file also has a JSHint task for Travis.

--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -27,12 +27,15 @@ html(lang="en" ng-app="3drepo").ng-scope
 			//.constant('pluginLevels', !{pluginLevelsJSON})
 			.constant('uiState', !{uistate});
 
+		// Plugin JS and Angular files
+		script(type="text/javascript", src='/public/dist/plugins.min.js')
+
 		// Plugin JS Files
-		each val in pluginJS
+		//each val in pluginJS
 			script(type="text/javascript", src=val)
 
 		// Plugin Angular Files
-		each plugin in pluginAngular
+		//each plugin in pluginAngular
 			each file in plugin.files
 				script(type="text/javascript", src=file)
 
