--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1433,11 +1433,9 @@ header button.btn {
 }
 
 /*************************************************/
-// Taken from http://jsfiddle.net/KyleMit/Buwm8/
+/* Taken from http://jsfiddle.net/KyleMit/Buwm8/
 /*************************************************/
 
-
-s
 /* Helps position submenu */
 .dropdown-submenu {
     position: relative;
@@ -1628,3 +1626,72 @@ ul.fancytree-container li {
 	visibility: hidden;
 }
 
+/** Walkthrough *******************************************************************************************************/
+#walkthrough {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  z-index: 10000;
+  width: 250px;
+  background: rgba(5, 58, 165, 1.0);
+  padding: 10px 10px 10px 5px;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.walkthroughButtons {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  margin-right: 10px;
+}
+
+.walkthroughButtons button {
+  margin-left: 2px !important;
+  padding: 5px 6px 2px 6px;
+}
+
+.walkthroughButtons button span {
+  font-size: 18px;
+}
+
+#walkthrough .btn-toolbar button {
+  padding: 5px 6px 5px 6px;
+  margin-left: 4px;
+}
+
+.walkthroughButtonSelected {
+  background: #999;
+  color: #FFFFFF;
+  outline: none;
+}
+
+.walkthroughButtonUnselected {
+  background: #FFFFFF;
+  color: #000000;
+  outline: none;
+}
+
+/** Viewing ***********************************************************************************************************/
+#viewing {
+  display: block;
+  position: absolute;
+  top: 17px;
+  right: 320px;
+  z-index: 10000;
+}
+
+.viewingButtonSelected {
+  background: #999;
+  color: #FFFFFF;
+  outline: none;
+  margin-left: 6px;
+}
+
+.viewingButtonUnselected {
+  background: #FFFFFF;
+  color: #000000;
+  outline: none;
+  margin-left: 6px;
+}
