ISSUE #83 - Small fixes for walkthrough

--- a/plugins/walkthrough/walkthrough.jade
+++ b/plugins/walkthrough/walkthrough.jade
@@ -5,8 +5,8 @@
 				| {{$index + 1}}
 	.walkthroughButtons
 		button(ng-class="wt.recordButtonClass")
-			span(class="glyphicon glyphicon-record" ng-click="wt.record()")
+			span(class="fa fa-circle" ng-click="wt.record()")
 		button(class="btn btn-info dropdown-toggle")
-			span(class="glyphicon glyphicon-play-circle" ng-click="wt.play()")
+			span(class="fa fa-play-circle" ng-click="wt.play()")
 		button(class="btn btn-info dropdown-toggle")
-			span(class="glyphicon glyphicon-pause" ng-click="wt.stop()")
+			span(class="fa fa-pause" ng-click="wt.stop()")
