ISSUE #86 - Icons for viewing buttons, pause after user control is 60 seconds, getting of saved walkthroughs working

--- a/plugins/viewing/viewing.jade
+++ b/plugins/viewing/viewing.jade
@@ -2,4 +2,4 @@
 	.btn-toolbar(role="toolbar")
 		.btn-group(role="group")
 			button(type="button", ng-class="{viewingButtonSelected : vw.currentViewing===$index, viewingButtonUnselected : vw.currentViewing!==$index}", ng-repeat="viewing in vw.viewings track by $index" ng-click="vw.setCurrentViewing($index)")
-				| {{viewing.label}}
+				span(class="fa {{viewing.icon}}")
