ISSUE #88 - Implemented left buttons and added more functionality to left panel

--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -51,7 +51,7 @@ html(lang="en" ng-app="3drepo").ng-scope
 				!= renderMe('./plugins/' + j.template, locals)
 				
 		.container-fluid
-			.row.mainrow
+			//.row.mainrow
 				ng-include(src="'header.html'")
 			.row
 				div(ui-view='')
