--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -21,7 +21,7 @@ html(lang="en" ng-app="3drepo").ng-scope
 
 		// Predefine the app
 		script.
-			angular.module('3drepo', ['ui.router', 'ui.bootstrap', 'ui.bootstrap-slider', 'ngMaterial'])
+			angular.module('3drepo', ['ui.router', 'ui.bootstrap', 'ui.bootstrap-slider', 'ngMaterial', 'ui.tree', 'ui.tree-filter'])
 			.constant('structure', !{structure})
 			.constant('parentStates', !{parentStateJSON})
 			//.constant('pluginLevels', !{pluginLevelsJSON})
