--- a/plugins/AM_/leftPanel/leftPanelContent.jade
+++ b/plugins/AM_/leftPanel/leftPanelContent.jade
@@ -1,5 +1,5 @@
-div(layout="column" class="md-whiteframe-1dp" ng-click="lpc.click()" ng-class="lpc.class")
-	md-toolbar(class="md-primary")
+div(layout="column", class="md-whiteframe-1dp", ng-class="lpc.class", ng-show="lpc.showContent")
+	md-toolbar(class="md-primary", ng-click="lpc.click()")
 		div(class="md-toolbar-tools")
 			label(class="md-flex") {{lpc.title}}
 	md-content(id="content", flex, layout-padding)
