--- a/public/plugins/AM_/tree/tree.css
+++ b/public/plugins/AM_/tree/tree.css
@@ -2,5 +2,107 @@ tree {
   display: block;
   width: 100%;
   height: 500px;
-  background: #925;
+}
+
+.tree .btn-off {
+  color: #fff;
+  background-color: #428bca;
+  border-color: #357ebd;
+}
+.tree .btn-off:hover {
+  color: #fff;
+}
+
+.tree .btn {
+  margin-right: 8px;
+}
+
+.angular-ui-tree-handle {
+  background: #f8faff;
+  border: 1px solid #dae2ea;
+  color: #7c9eb2;
+  padding: 10px 10px;
+}
+
+.angular-ui-tree-handle:hover {
+  color: #438eb9;
+  background: #f4f6f7;
+  border-color: #dce2e8;
+}
+
+.angular-ui-tree-placeholder {
+  background: #f0f9ff;
+  border: 2px dashed #bed2db;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.group-title {
+  background-color: #687074 !important;
+  color: #FFF !important;
+}
+
+.tree-node-unselected {
+  background: #f8faff;
+}
+.tree-node-selected {
+  background: #e1e3e8;
+}
+
+.tree-node:hover {
+  cursor: default;
+}
+
+.nodrop {
+  background-color: #f2dede;
+}
+
+.tree-node-content {
+  margin: 0;
+}
+.tree-node-content label {
+  font-size: 12px;
+  color: #777777;
+}
+.tree-node-content label:hover {
+  cursor: pointer;
+}
+
+.tree-handle {
+  padding: 10px;
+  background: #428bca;
+  color: #FFF;
+  margin-right: 10px;
+}
+
+.angular-ui-tree-handle:hover {
+}
+
+.angular-ui-tree-placeholder {
+  background: #f0f9ff;
+  border: 2px dashed #bed2db;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.angular-ui-tree-handle {
+  padding: 7px 10px 3px;
+  display: inline-block;
+  width: 800px;
+}
+
+tree-node button {
+  width: 22px;
+  min-width: 22px !important;
+  height: 22px;
+  min-height: 22px !important;
+  line-height: 22px !important;
+  margin: 0 4px 0 0 !important;
+  padding: 4px !important;
+}
+
+.angular-ui-tree-node {
+  min-height: 0;
 }
