ISSUE #88 - Filter on node path

--- a/plugins/AM_/tree/tree.jade
+++ b/plugins/AM_/tree/tree.jade
@@ -1,4 +1,4 @@
-div(ui-tree, data-nodrop-enabled="true", data-nodrag="true")
+div(ui-tree, data-nodrop-enabled="true", data-nodrag="true", ng-if="tr.showTree")
 	tree-nodes(
 		nodes="tr.nodes"
 		show-children="tr.showChildren"
