ISSUE #88 - Added tooltips and improved colours

--- a/public/plugins/AM_/leftPanel/leftPanel.css
+++ b/public/plugins/AM_/leftPanel/leftPanel.css
@@ -20,12 +20,12 @@ left-panel md-toolbar label {
 filter, left-panel-content {
   display: block;
   margin-bottom: 20px;
+  position: relative;
 }
 
 .leftPanelContentSelected {
   max-height: 500px;
 }
-
 .leftPanelContentUnselected {
   max-height: 100px;
 }
