--- a/plugins/AM_/bottomButtons/bottomButtons.jade
+++ b/plugins/AM_/bottomButtons/bottomButtons.jade
@@ -1,18 +1,16 @@
 div(layout="row", layout-align="center center")
-	div
+	div(ng-if="bb.showButtons")
 		md-button.md-fab.md-mini.md-primary.md-hue-3(
 			ng-repeat="button in bb.leftButtons track by $index"
-			ng-click="button.callback()"
-			ng-if="bb.showButtons"
+			ng-click="button.click()"
 			aria-label="{{button.label}}")
 			md-icon(md-font-icon="{{button.icon}}", class="fa")
 	div
 		md-button.md-fab.md-primary(ng-click="bb.showHideButtons()", aria-label="Show buttons")
 			md-icon#showButtonIcon(md-font-icon="fa-navicon", class="fa")
-	div
+	div(ng-if="bb.showButtons")
 		md-button.md-fab.md-mini.md-primary.md-hue-3(
 			ng-repeat="button in bb.rightButtons track by $index"
-			ng-click="button.callback()"
-			ng-if="bb.showButtons"
+			ng-click="button.click()"
 			aria-label="{{button.label}}")
 			md-icon(md-font-icon="{{button.icon}}", class="fa")
