--- a/plugins/AM_/filter/filter.jade
+++ b/plugins/AM_/filter/filter.jade
@@ -1,5 +1,9 @@
 md-content(layout-padding class="md-whiteframe-1dp")
-	form
-		md-input-container
-			label Filter
-			input(type="text", ng-model="fl.filterText")
+	md-input-container
+		label Filter
+		input(type="text", ng-model="fl.filterText")
+
+div(ng-if="fl.showHelp")
+	md-button.md-fab.md-mini#helpButton(aria-label="Help")
+		md-icon(md-font-icon="fa-question", class="fa")
+		md-tooltip(md-direction="top") Enter text here to filter results in the contents
