--- a/plugins/AM_/leftButtons/leftButtons.jade
+++ b/plugins/AM_/leftButtons/leftButtons.jade
@@ -1,3 +1,4 @@
-div(ng-repeat="button in lb.buttons track by $index")
-	md-button.md-fab.md-primary.md-mini(ng-click="lb.click($index)", aria-label="{{button.icon}}")
-		md-icon(md-font-icon="{{button.icon}}", class="fa")
+div(ng-show="lb.showButtons")
+	div(ng-repeat="button in lb.buttons track by $index")
+		md-button.md-fab.md-primary.md-mini(ng-click="lb.click($index)", aria-label="{{button.icon}}")
+			md-icon(md-font-icon="{{button.icon}}", class="fa")
