ISSUE #88 - Introduced single panel directive

--- a/plugins/project/project.jade
+++ b/plugins/project/project.jade
@@ -29,7 +29,7 @@
 		each uicomp in ui.walkthrough
 			!= renderMe(uicomp["template"], locals)
 
-	left-panel
+	//left-panel
+	panel#leftPanel(position="left")
 	panel#rightPanel(position="right")
-	left-buttons
 	bottom-buttons
